--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,6 +1,6 @@
 .header-wrapper {
     position: relative;
-    background: url(/Users/Aftaab/gt/homework/portfolio/src/port-background.jpeg);
+    background: url(/Users/Aftaab/gt/homework/portfolio/src/portfoliodark.jpeg);
     background-size: cover;
     background-position: center;
     height: 90vh;
@@ -8,6 +8,11 @@
 
 .main-info {
     display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     flex-direction: column;
     justify-content: center;
     align-items: center;
